# axp

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
crates/axp-cli/: Cargo.toml
crates/axp-cli/src/: demo.rs  lib.rs  main.rs  mcp_config.rs
crates/axp-cli/tests/: serve_mcp_mount.rs
crates/axp-client/: Cargo.toml
crates/axp-client/src/: error.rs  lib.rs  rpc.rs
crates/axp-client/tests/: http.rs
crates/axp-codemode/: Cargo.toml
crates/axp-codemode/src/: error.rs  lib.rs  runner.rs
crates/axp-core/: Cargo.toml
crates/axp-core/src/: auth.rs  builtins.rs  capability.rs  error.rs  lib.rs  mcp.rs  provider.rs  registry.rs  session.rs  workspace.rs
crates/axp-core/src/job/: engine.rs  log.rs  mod.rs  status.rs  store.rs
crates/axp-proto/: Cargo.toml
crates/axp-proto/src/: capability.rs  discovery.rs  ids.rs  job.rs  lib.rs  session.rs  tier.rs  version.rs
crates/axp-sandbox/: Cargo.toml
crates/axp-sandbox/src/: error.rs  lib.rs  linux.rs  policy.rs  probe.rs  seccomp.rs  tier.rs
crates/axp-sandbox/tests/: landlock_fs.rs  seccomp_filter.rs
crates/axp-transport/: Cargo.toml
crates/axp-transport/src/: attach.rs  error.rs  handlers.rs  jsonrpc.rs  lib.rs  router.rs  state.rs
crates/axp-transport/tests/: integration.rs
docs/: AXP-ARCHITECTURE.md
rfcs/: 0000-template.md  README.md
