[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/ml-rust/axp"
authors = ["The AXP Authors"]

[workspace.dependencies]
# External
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "time"] }
clap = { version = "4", features = ["derive"] }
tempfile = "3"
bytes = "1"
landlock = "0.4"

# Internal
axp-proto = { path = "crates/axp-proto", version = "0.0.0" }
axp-core = { path = "crates/axp-core", version = "0.0.0" }
axp-sandbox = { path = "crates/axp-sandbox", version = "0.0.0" }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.lints.rust]
unsafe_code = "deny"
