[package]
name = "axp-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
# default: src/lib.rs

[[bin]]
name = "axp"
path = "src/main.rs"

[dependencies]
axp-client = { workspace = true }
axp-proto = { workspace = true }
axp-transport = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
