[package]
name = "axp-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
axp-proto = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
