[package]
name = "axp-sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
axp-proto = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true } # for the tokio::process::Command type in apply()'s signature

# Linux-only: the actual kernel-sandbox crates. cfg-gated so macOS/Windows still build.
# Per declare-on-use, U6a only uses `landlock` (the availability probe); `seccompiler`
# and `nix` are added by U6b/U6c when their code references them.
[target.'cfg(target_os = "linux")'.dependencies]
landlock = { workspace = true }

[lints]
workspace = true
