[package]
name = "axp-sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
axp-proto = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true } # for the tokio::process::Command type in apply()'s signature

# Linux-only: the actual kernel-sandbox crates. cfg-gated so macOS/Windows still build.
# Per declare-on-use, U6a only uses `landlock` (the availability probe); `seccompiler`
# and `nix` are added by U6b/U6c when their code references them.
[target.'cfg(target_os = "linux")'.dependencies]
landlock = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

# This crate is the one place in the project permitted to use `unsafe` (the
# `pre_exec` post-fork hook for Landlock enforcement). Mixing `workspace = true`
# with overrides is not allowed, so the clippy lint group is restated here.
[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
